legacy/home/k8s/apps/default/statping/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: le-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  name: statping
  labels:
    app: statping
spec:
  rules:
    - host: status.waltr.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: statping
                port:
                  number: 8080
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
      - status.waltr.tech
      secretName: statuswaltrtech-cert # < cert-manager will store the created certificate in this secret
